Fixed overlapping of slider timeline and main navigation.

--- a/apollo-src/scss/apollo-slider.scss
+++ b/apollo-src/scss/apollo-slider.scss
@@ -39,6 +39,10 @@
   }
 }
 
+.slider.fullwidthbanner {
+	z-index: 0; /* prevents overlapping of timeline and main navigation */
+}
+
 .slider.revslider-initialised.tp-simpleresponsive {
   position: relative;
 }
